# chat-rs

./: Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  test.rest
chat-core/: Cargo.toml
chat-core/src/: lib.rs
chat-core/src/middleware/: auth.rs  mod.rs
chat-core/src/utils/: jwt.rs
chat-server/: Cargo.toml  test.http
chat-server/fixtures/: test.sql
chat-server/sql/: init.sql
chat-server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat-server/src/handler/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat-server/src/middleware/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat-server/src/model/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat-server/src/utils/: jwt.rs
chat-test/: Cargo.toml  chat.yml
chat-test/tests/: chat.rs
migrations/: 20250224073931_initial.sql  20250303082440_workspaces.sql  20250312012528_triggers.sql
notify-server/: Cargo.toml  index.html
notify-server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
