[workspace]
members = ["chat-server", "notify-server"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["http2", "query", "tracing", "multipart"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
thiserror = "2.0.11"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
