[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { path = "../chat-core" }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = { workspace = true }
serde_json = "1.0.139"
tower = { workspace = true }
tower-http = {workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
uuid ={workspace = true}

[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.5.0"
