[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]


[dependencies]
chat-core = { path = "../chat-core" }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
http-body-util = { version = "0.1.2", optional = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
uuid = { workspace = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.5.0"
chat-server = { workspace = true, features = ["test-util"] }
